--- a/P_SQL/nbproject/project.properties
+++ b/P_SQL/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.P_Model.jar}
+    ${reference.P_Model.jar}:\
+    ${libs.OR.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
