--- a/P_Vista/ConnectionOracle.properties
+++ b/P_Vista/ConnectionOracle.properties
@@ -1,3 +1,3 @@
-url=jdbc:oracle:thin:@//7.242.33.147:1521/XEPDB1
-user=jvalldaur
+url=jdbc:oracle:thin:@//169.254.254.254:1521/XEPDB1
+user=dam2_jvalldaur
 password=jordi123
