--- a/P_Vista/nbproject/project.properties
+++ b/P_Vista/nbproject/project.properties
@@ -38,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.P_Model.jar}:\
     ${reference.P_SQL.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.OR.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
